@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkMacOSXWm.c,v 1.25 2006/04/06 09:28:32 das Exp $
+ * RCS: @(#) $Id: tkMacOSXWm.c,v 1.26 2006/04/07 06:15:42 das Exp $
  */
 
 #include "tkMacOSXInt.h"
@@ -4497,6 +4497,7 @@ TkMacOSXGrowToplevel(
     TkDisplay *dispPtr;
     Rect       portRect;
 
+    SetPort(GetWindowPort(whichWindow));
     GlobalToLocal(&where);
     GetPortBounds(GetWindowPort(whichWindow), &portRect );
     if (where.h > (portRect.right - 16) &&
@@ -4535,7 +4536,6 @@ TkMacOSXGrowToplevel(
 	if (growResult != 0) {
 	    SizeWindow(whichWindow,
 		    LoWord(growResult), HiWord(growResult), true);
-	    SetPort( GetWindowPort(whichWindow));
 	    InvalWindowRect(whichWindow,&portRect); /* TODO: may not be needed */
 	    TkMacOSXInvalClipRgns((Tk_Window) winPtr);
 	    TkGenWMConfigureEvent((Tk_Window) winPtr, -1, -1, 
@@ -4686,7 +4686,7 @@ TkMacOSXZoomToplevel(
     TkDisplay *dispPtr;
     Rect       portRect;
 
-    SetPort( GetWindowPort(whichWindow));
+    SetPort(GetWindowPort(whichWindow));
 
     /*
      * We should now zoom the window (as long as it's one of ours).  We 
